--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,15 @@ dependencies:
   local_auth_android: ^1.0.36
   get: ^4.6.6
   modal_progress_hud_nsn: ^0.5.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  pdf: ^3.11.0
+  shared_preferences: ^2.2.2
   
 
 dev_dependencies:
+  build_runner: ^2.4.9
+  hive_generator: ^2.0.1
   flutter_test:
     sdk: flutter
 
