--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   hive_flutter: ^1.1.0
   pdf: ^3.11.0
   shared_preferences: ^2.2.2
+  image_picker: ^1.0.8
+  path_provider: ^2.0.11
+  connectivity_plus: ^2.3.8
   
 
 dev_dependencies:
