--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -17,11 +17,11 @@ jobs:
         with:
           channel: "stable"
       - run: flutter pub get
-      - run: flutter build apk --split-per-abi
+      - run: flutter build apk --release --split-per-abi
 
       - name: Push to Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/release/*"
+          artifacts: "build/app/outputs/flutter-apk/*"
           tag: v0.0.1
 
