--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -1,27 +1,37 @@
-name: CI
+name: Build and Release APK
 on:
   push:
     branches:
       - master
 jobs:
   build:
-    name: Build And Release  new apk
+    name: Build and Release APK
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
           java-version: '11'
-      - uses: subosito/flutter-action@v2
+
+      - name: Install Flutter    
+        uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
-      - run: flutter pub get
-      - run: flutter build apk --release --split-per-abi
+          channel: 'stable'
+          # flutter-version: 'stable'
+      - name: Flutter pub get    
+        run: flutter pub get
+
+      - name: Build APK
+        run: flutter build apk --release --split-per-abi
 
       - name: Push to Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/flutter-apk/*"
+          artifacts: 'build/app/outputs/flutter-apk/*'
+          token: ${{secrets.REPO_SECRET}}
           tag: v1.0.0+1
 
