--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   image_picker: ^1.0.8
   path_provider: ^2.0.11
   connectivity_plus: ^2.3.8
+  cached_network_image: ^3.3.1
   
 
 dev_dependencies:
