--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Flutter pub get    
         run: flutter pub get
 
-      - name: Build APK
-        run: flutter build apk --release --split-per-abi
+      # - name: Build APK
+      #   run: flutter build apk --release --split-per-abi
 
       - name: Push to Release
         uses: ncipollo/release-action@v1
