--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Push to Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: 'build/app/outputs/flutter-apk/*'
+          artifacts: 'build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk'
           token: ${{secrets.REPO_SECRET}}
-          tag: v1.0.0+1
+          tag: v1.0.4
 
